# website-icon-extract-rust

./: Cargo.toml  Dockerfile  README.md
examples/: main.rs
src/: lib.rs  request.rs
