[package]
name = "website-icon-extract"
version = "0.4.2"
authors = ["segler-alex <segler_alex@web.de>"]
license = "MIT"
categories = ["network-programming", "parsing"]
repository = "https://github.com/segler-alex/website-icon-extract-rust"
description = "extract favicon link paths from a html page from different standards"
edition = "2018"

[dependencies]
native-tls = "0.2.7"
url = "2.2.1"
quick-xml = "0.22.0"

[dev-dependencies]