[package]
name = "website-icon-extract"
version = "0.5.1"
authors = ["segler-alex <segler_alex@web.de>"]
license = "MIT"
categories = ["network-programming", "parsing"]
repository = "https://github.com/segler-alex/website-icon-extract-rust"
description = "extract favicon link paths from a html page from different standards"
edition = "2018"

[dependencies]
imagesize = "0.10.1"
log = "0.4.17"
quick-xml = "0.23.1"
reqwest = { version = "0.11.12", features = ["blocking"] }

[dev-dependencies]